--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "dang-thats-delicious",
-  "version": "0.0.0",
+  "name": "learn-node-webapp",
+  "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">= 7.6.0"
+    "node": ">= 8"
   },
   "scripts": {
-    "prod": "node ./start.js",
+    "start": "node ./start.js",
     "watch": "nodemon ./start.js --ignore public/",
-    "start": "concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
+    "dev": "concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
     "assets": "webpack -w --display-max-modules 0",
     "sample": "node ./data/load-sample-data.js",
     "blowitallaway": "node ./data/load-sample-data.js --delete",
@@ -57,7 +57,7 @@
     "extract-text-webpack-plugin": "2.1.0",
     "node-sass": "^4.7.2",
     "nodemon": "^1.18.3",
-    "now": "^6.4.1",
+    "now": "^17.1.1",
     "postcss-loader": "1.3.3",
     "sass-loader": "6.0.3",
     "webpack": "2.2.1"
