add some details

--- a/now.json
+++ b/now.json
@@ -4,5 +4,5 @@
     "DATABASE": "@my-mongodb-uri",
     "NODE_ENV": "production"
   },
-  "builds": [{ "src": "/start.js", "use": "@now/node-server" }]
+  "builds": [{ "src": "/", "use": "@now/node-server" }]
 }
