--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "dev": "concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
     "assets": "webpack -w --display-max-modules 0",
     "sample": "node ./data/load-sample-data.js",
-    "blowitallaway": "node ./data/load-sample-data.js --delete",
-    "now": "now -e DB_USER=@db_user -e DB_PASS=@db_pass -e NODE_ENV=\"production\" -e PORT=80"
+    "blowitallaway": "node ./data/load-sample-data.js --delete"
   },
   "browserslist": "last 3 versions",
   "dependencies": {
-    "axios": "0.18.1",
+    "axios": "0.19.2",
     "body-parser": "^1.19.0",
     "connect-flash": "0.1.1",
     "connect-mongo": "1.3.2",
