--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "private": true,
   "engines": {
-    "node": ">= 10"
+    "node": "10"
   },
   "scripts": {
     "start": "node ./start.js",
