--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "10"
   },
   "scripts": {
+    "prestart": "webpack -p",
     "start": "node ./start.js",
     "watch": "nodemon ./start.js --ignore public/",
     "dev": "concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
